# sphinx-sqlite3fts

./: .pre-commit-config.yaml  .readthedocs.yml  CHANGES.rst  README.rst  pyproject.toml  setup.cfg
.github/: FUNDING.yml
.github/workflows/: deploy-docs.yml  main.yml  release.yml
docs/: Makefile  changelogs.rst  cli-tool.rst  conf.py  configuration.rst  database-spec.rst  getting-started.rst  index.rst
docs/locales/ja/LC_MESSAGES/: changelogs.po  cli-tool.po  configuration.po  database-spec.po  getting-started.po  index.po
src/sphinx_sqlite3fts/: __init__.py  builders.py  cli.py  events.py  models.py  services.py  utils.py
src/sphinx_sqlite3fts/static/: searchtools.js
tests/: conftest.py  test_builders.py  test_events.py  test_services.py  test_stub.py
tests/roots/test-default/: conf.py  index.rst
tests/rst/: multiple-sub-sections.rst  single-section.rst  sub-sections.rst
